--- a/css/styles.css
+++ b/css/styles.css
@@ -5,6 +5,7 @@
 .react-grid-item {
   transition: all 200ms ease;
   transition-property: left, top;
+  touch-action: auto !important;
 }
 .react-grid-item.cssTransforms {
   transition-property: transform;
